<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/author1"
    android:orientation="vertical"
    tools:context=".authorActivity">
    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/author"/>
    <TextView
    android:id="@+id/tel"
    android:layout_marginTop="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:gravity="center"
    android:textSize="20sp"
    android:text="@string/information"
    android:textColor="@color/white"

    />
    <TextView
        android:id="@+id/information"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:autoLink="phone"
        android:textSize="20sp"
        android:text="@string/tel"
        android:textColor="@color/white"
        android:onClick="tel"
        />
    <TextView
        android:id="@+id/email"
        android:layout_marginTop="30dp"
        android:autoLink="email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/email"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/adress"
        android:layout_marginTop="30dp"
        android:autoLink="all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/adress"
        android:textColor="@color/white"
        android:onClick="map"
        />

</LinearLayout>