<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg7"
    tools:context=".TotalActivity">



    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/total_title"
        android:textStyle="bold"
        android:textSize="20sp" />
    <Button
        android:id="@+id/run"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="run"
        android:text="@string/set" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/total_title_button"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/suggestion3_width"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/suggestion3_width"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_button_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/c"
                android:inputType="number" />


            <TextView
                android:id="@+id/suggestion3_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/suggestion3_height"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_button_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/c"
                android:inputType="number" />

            <TextView
                android:id="@+id/suggestion3_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/suggestion3_content"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_button_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/none"
                android:inputType="text" />


        </LinearLayout>

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/total_title_textview"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/suggestion3_width2"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/suggestion1_width"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_textview_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/c"
                android:inputType="number" />


            <TextView
                android:id="@+id/suggestion3_height2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/suggestion1_height"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_textview_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/c"
                android:inputType="number" />

            <TextView
                android:id="@+id/suggestion3_content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/suggestion1_content"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_textview_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:ems="10"
                android:gravity="center"
                android:textSize="15sp"
                android:hint="@string/none"
                android:inputType="text" />


        </LinearLayout>

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"

                android:text="@string/total_title_edittext"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/suggestion3_width3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/suggestion2_width"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_editview_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/c"
                android:inputType="number" />


            <TextView
                android:id="@+id/suggestion3_height3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/suggestion2_height"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_editview_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:textSize="15sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/c"
                android:inputType="number" />

            <TextView
                android:id="@+id/suggestion3_content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/suggestion2_content"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_editview_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:ems="10"
                android:gravity="center"
                android:textSize="15sp"
                android:hint="@string/none"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="save"
        android:text="@string/btn" />

</LinearLayout>
