<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/design"
        android:onClick="author"
        android:textSize="35sp" />



    <Button

        android:id="@+id/design_textview"
        android:layout_gravity="center"
        android:layout_width="366dp"
        android:layout_marginTop="150dp"
        android:layout_height="wrap_content"
        android:onClick="skip"
        android:text="@string/design_c" />





    <Button

        android:id="@+id/design_check"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:onClick="skip3"

        android:text="@string/design_check" />


</LinearLayout>